# LMUSettingsManager

./: .gitignore  context.md  execreator  main.py  pyproject.toml  tasklist.JSON
example/: Config_DX11.ini  Settings.JSON
example/UserData/player/: Settings.JSON  conf_TesT_Config_DX11.ini  conf_TesT_settings.json  conf_VR_settings.json  lmu_config_metadata.json  settings.json  settings.json.before_load
json_lmu_editor/: __init__.py  __main__.py  main.py
json_lmu_editor/core/: configuration_manager.py  game_detector.py  profile_manager.py
json_lmu_editor/core/models/: field_state.py
json_lmu_editor/core/optimizations/: __init__.py  lazy_loader.py  search_indexer.py
json_lmu_editor/core/parsers/: json_parser.py
json_lmu_editor/ui/: app.py  main_window.py
json_lmu_editor/ui/dialogs/: __init__.py  compare_dialog.py  profile_sync_dialog.py  save_dialog.py  startup_info_dialog.py
json_lmu_editor/ui/optimizations/: __init__.py  virtual_scroll.py
json_lmu_editor/ui/shortcuts/: __init__.py
json_lmu_editor/ui/widgets/: apply_button.py  category_tabs.py  config_panel.py  field_widget.py  search_widget.py
src/json_lmu_editor/: main.py
src/json_lmu_editor/core/: comparison_engine.py  configuration_manager.py  error_handler.py  import_export.py  profile_manager.py
src/json_lmu_editor/core/models/: configuration_model.py
src/json_lmu_editor/core/optimizations/: search_indexer.py
src/json_lmu_editor/core/parsers/: ini_parser.py
src/json_lmu_editor/ui/: main_window.py
src/json_lmu_editor/utils/: settings_manager.py
(+4 files in other folders)
