[project]
name = "json-lmu-editor"
version = "0.1.0"
description = "A desktop application for managing Le Mans Ultimate game configuration files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.6.0",
    "configparser>=6.0.0",
]

[project.scripts]
lmu-config-editor = "json_lmu_editor.main:main"
lmu-config-editor-gui = "json_lmu_editor.ui.app:run_gui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["json_lmu_editor"]
